Database-migration-using-DMS/terraform/sg_onprem.tf
resource "aws_security_group" "onprem_web" {
  vpc_id = aws_vpc.onprem.id
  name   = "onprem-web-sg"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "onprem_db" {
  vpc_id = aws_vpc.onprem.id
  name   = "onprem-db-sg"

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
